[package]
name = "weectrl"
version = "1.2.0"
authors = ["Klaus Nielsen <hyperchaotic@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["WeMo"]
repository = "https://github.com/Hyperchaotic/weectrl"
homepage = "https://github.com/Hyperchaotic/weectrl"
description = "A library and application for controlling WeMo switches."
categories = ["Network Programming"]
edition = "2021"


[dependencies]

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["local-time"] }
directories = "4"

mime = "0.3.16"
serde-xml-rs = "0.5.1"
serde_json = "1.0"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2"
reqwest = { version = "0.11", features = ["blocking"] }

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies] 
fltk = "1"
fltk-theme = "0.4"

[lib]
name = "weectrl"
path = "src/lib.rs"
